{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PuckControl",
            "id": "3d0d94fd-2a9c-43b0-af50-bae14a4d5617",
            "actions": [
                {
                    "name": "MovePuck",
                    "type": "Value",
                    "id": "9e852e9f-d7b2-4bce-8083-12a8f374546f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "c7c5439e-dc88-4034-8640-2f5e8d79a8ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "91811c8b-02e6-4846-b135-18dce3c2fffb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePuck",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f640717-0872-4f9d-a8f5-700367cf7bd1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}